--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react": "^17.0.2",
     "react-devicon": "^0.1.9",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tsparticles": "^1.30.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
